--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Youtella | Summarize Any Video Instantly</title>
-    <meta name="title" content="Youtella | Summarize Any Video Instantly" />
-    <meta name="description" content="Youtella uses AI to instantly generate summaries from YouTube URLs, video files, or MP3s — including key points, detailed summaries, and timestamps." />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://youtella.ai/" />
-    <meta property="og:title" content="Youtella | Summarize Any Video Instantly" />
-    <meta property="og:description" content="Paste a YouTube link or upload a video/audio file to get a clean, readable AI-powered summary with key insights and timestamps." />
-    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://youtella.ai/" />
-    <meta property="twitter:title" content="Youtella | Summarize Any Video Instantly" />
-    <meta property="twitter:description" content="Use Youtella to quickly get key takeaways from long videos. Just paste a YouTube URL or upload your meeting recording." />
-    <meta property="twitter:image" content="%PUBLIC_URL%/preview.png" />
+  <!-- Primary Meta Tags -->
+  <title>Youtella | Summarize Any Video Instantly</title>
+  <meta name="title" content="Youtella | Summarize Any Video Instantly" />
+  <meta name="description"
+    content="Youtella uses AI to instantly generate summaries from YouTube URLs, video files, or MP3s — including key points, detailed summaries, and timestamps." />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://youtella.ai/" />
+  <meta property="og:title" content="Youtella | Summarize Any Video Instantly" />
+  <meta property="og:description"
+    content="Paste a YouTube link or upload a video/audio file to get a clean, readable AI-powered summary with key insights and timestamps." />
+  <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://youtella.ai/" />
+  <meta property="twitter:title" content="Youtella | Summarize Any Video Instantly" />
+  <meta property="twitter:description"
+    content="Use Youtella to quickly get key takeaways from long videos. Just paste a YouTube URL or upload your meeting recording." />
+  <meta property="twitter:image" content="%PUBLIC_URL%/preview.png" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1K3J6WB9ST"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-1K3J6WB9ST');
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
